IBX-5248: Fixed checkbox alignment in content center table cell (#730)

--- a/src/bundle/Resources/public/scss/_tables.scss
+++ b/src/bundle/Resources/public/scss/_tables.scss
@@ -159,6 +159,10 @@
 
         &--content-center {
             text-align: center;
+
+            .ibexa-input--checkbox {
+                margin-bottom: 0;
+            }
         }
     }
 
